🚑️ Bugs correction in flex and z-index added
Bugs in flex were fixed and z-index added to parts of pages

--- a/static/css/results.css
+++ b/static/css/results.css
@@ -18,7 +18,9 @@
 	font-weight: normal;
 }
 
+
 /*Área De navegação*/
+
 
 body {
 	overflow-x: hidden;
@@ -37,12 +39,17 @@ header {
 }
 
 .container-navbar {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 100%;
-	border-bottom: solid 2px black;
-	background-color: #d1d1b3;
+    display: flex;
+    z-index: 1;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    border-bottom: solid 2px black;
+    background-color: #d1d1b3;
+    top: 0;
+    user-select: none;
 }
 
 .navbar {
@@ -88,6 +95,7 @@ header {
 }
 
 .candidate {
+	z-index: -1;
 	text-align: center;
 	width: 30%;
 	min-width: 16rem;
@@ -234,7 +242,10 @@ header {
 }
 
 @media (max-width: 460px) {
+
+
 	/*Área De navegação*/
+
 
 	.navbar {
 		display: flex;
@@ -338,6 +349,8 @@ header {
 	/*Área inferior*/
 
 	.footer-content {
+		position: relative;
+		z-index: -1;
 		flex-direction: column;
 		padding: 0 0 6rem 0;
 	}
